window.showModalDialog doesn't work in DumpRenderTree on Windows https://bugs.webkit.org/show_bug.cgi?id=53675

Reviewed by Brent Fulgham.

Tools:

Implement modal dialog support in DumpRenderTree.

* DumpRenderTree/win/UIDelegate.cpp:
(UIDelegate::canRunModal):
(getHandleFromWebView):
(UIDelegate::createModalDialog):
(findTopLevelParent):
(UIDelegate::runModal):
(UIDelegate::webViewClose):
* DumpRenderTree/win/UIDelegate.h:

LayoutTests:

Update test expectations for modal dialog tests.

* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/177093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202326 268f45cc-cd09-0410-ab3c-d52691b4dbfc